# my_custom_chatbot_server

./: .gitignore  README.md  ingest_pdf.py  playground.ipynb  pyproject.toml
app/: main.py
app/models/: retrieval_chat.py
app/server/: app.py
